starter/static/css/main.css
/* ... */
div.modal label {
    display: block;
    padding-top: .5em;
}

div.modal input,textarea,select {
    width: 100%;
    background-color: #fff;
    border: 1px solid rgba(0, 0, 0, .4);
    margin: 0;
    padding: 0;
}

div.modal input[type=button] {
    margin-top: .5em;
    height: 30px;
}

div.modal div.rendered-token {
    margin-top: 0;
}

div.modal div.checkbox-container {
    display: flex;
    align-items: center;
}

div.modal div.checkbox-container input {
    width: 30px;
    height: 15px;
    margin-top: 7px;
}
/* End of Modal CSS */

/* Multi-pane CSS */
div.merged-container {
    display: flex;
}

div.main-pane {
    max-width: 67%;
    min-width: 67%;

    height: calc(100vh - 97px);
    display: flex;
    flex-direction: column;
}

div.merged-task-container {
    display: flex;
    flex-grow: 1;
}

div.right-pane {
    max-width: 33%;
    min-width: 33%;
}

/* Ad-hoc fixes for tasks */
div.main-pane div.task-board {
    height: auto;
}

div.main-pane div.task-board div.full-column-container {
    overflow-y: auto;
}

/* Ad-hoc fixes for calendar */
div.right-pane div.calendar div.full-column-container {
    padding: 0;
}

div.right-pane div.calendar div.tag-selector-container {
    margin-left: 0;
}

div.right-pane div.calendar div.column-header {
    min-width: 0;
}

div.right-pane div.calendar div.column-header.single-day {
    min-width: 0;
}

div.right-pane div.calendar div.column-container {
    min-width: 0;
}

div.right-pane div.calendar div.column-container td {
    min-width: 0;
}

div.right-pane div.calendar div.column-container.single-day {
    min-width: 0;
}

div.right-pane div.calendar div.column-container.single-day td {
    min-width: 0;
}

div.right-pane div.calendar div.column-container.single-day div.current-time-cursor {
    min-width: 0;
}

div.right-pane div.calendar div.column-container.-times {
    max-width: 70px;
}

div.right-pane div.calendar div.column-header.-times {
    max-width: 70px;
}

div.right-pane div.calendar div.options div.pending-token-container input {
    width: 100%;
}

div.right-pane div.calendar div.options div.tag-selector-label {
    flex-shrink: 0;
}
/* End of Multi-pane CSS */

/* Note Board CSS */
div.note.card {
    margin: 10px 20px;
}

div.note div.note-header {
    display: flex;
    justify-content: space-between;
}

div.note div.note-header div.note-title {
    font-size: 2em;
    margin-bottom: .25em;
}

div.note div.note-content img {
    max-width: 100%;
    max-height: 480px;
}

div.note div.note-content .checked {
    color: rgba(0, 0, 0, .5);
    text-decoration: line-through;
}

div.note div.note-content h1,h2,h3,p {
    margin-top: 0;
    margin-bottom: 2px;
}

div.note-tags-container {
    display: flex;
}

div.note-tags-container div.card {
    margin-left: .25em;
    margin-bottom: 0;
    padding: .1em .25em;
}

div.note-header div.note-right-header {
    display: flex;
}

div.note-header div.note-options {
    cursor: pointer;
    margin-right: .5em;
}

div.edit-note-container textarea {
    font-family: "Courier New", Courier, monospace !important;
    min-width: 480px;
}
/* End of Note Board CSS */

/* Capture CSS */
div.create-capture-container input,textarea,select {
    width: 100%;
    background-color: #fff;
    border: 1px solid rgba(0, 0, 0, .4);
    margin: 0;
    padding: 0;
}

div.create-capture-container input[type=button] {
    margin-top: .5em;
    height: 30px;
}

div.capturer-container div.create-capture-container textarea {
    min-height: 200px;
    font-size: larger;
}

div.capturer-container div.create-capture-container input[type=button] {
    height: 3em;
    font-size: 34px;
}

div.capturer-container {
    font-size: 34px;
}

div.capturer-container div.capture-list-container div.capture-list-options {
    padding: 0;
}

div.capture-list-container .card {
    margin: .5em;
}

div.capture-list-container div.capture-list-options {
    background-color: #fff;
    padding: 0 1em 2em;
}

div.capture-container.card {
    display: flex;
    justify-content: space-between;
}

div.capture-container.card .capture-options-container {
    margin-left: .5em;
}

div.capture-container.card .capture-options-container .capture-delete {
    font-weight: bold;
    cursor: pointer;
}

div.captured-everything {
    margin: auto;
    text-align: center;
}
/* End of Capture CSS */

